# students-materials

./: .gitignore  .gitmodules  DTMFLab.ipynb  DTMF_lab.ipynb  DetectingTriadsLab.ipynb  Lab_6.ipynb  Lab_freq_conv.ipynb  NIR.ipynb  NLP ЛР1 Хайдукова Татьяна.ipynb  NLP1_Sergeeva (1).ipynb  NLP1_Train_Sergeeva (1).ipynb  NLP2_Sergeeva_.ipynb  NLP3_Sergeeva (1).ipynb  NLP3ipynb.ipynb  NLP_lab1.ipynb  NLP_ЛР1_Хайдукова_Татьяна (1).ipynb  NLP_ЛР2_Хайдукова_Татьяна.ipynb  NLP_ЛР3_Хайдукова_Татьяна.ipynb  README.md  conference_summarization.ipynb  demo.ipynb  directional_beamforming_results_20251004_063437.xlsx  dtmf_decoder.ipynb  frequency_converter.ipynb  nlp00002.ipynb  test_set.py  Гриффин-Лим.ipynb  Определение музыкальных трезвучий.ipynb  Ходжаметова_FreqConvLab.ipynb  ходжаметова_freqconvlab.py
2_semester/: lab11.ipynb  lab1_class.ipynb
2sem/nlp/lab1/: README.md  lab11.ipynb  lab12.ipynb  lab13.ipynb  pyproject.toml
2sem_nlp/: lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  readme.md  Лаб1_1_1_2.ipynb
AcousticEvents/: lab_3_AED_MFCC_DT.ipynb
AudioAnalytics/: lab_2_shoot.ipynb  lab_3_2_ cnn_exp.ipynb  lab_3_AED_MFCC_DT.ipynb
DTMFLab/: lab7.ipynb
FreqConvLab/: lab6.ipynb
ML/: Dockerfile  classifier.py  requirements.txt  run_docker.sh
NIR/: README.md  README.md.txt  Streamlit.py  eGeMAPS.py
NIR project/: Demo.ipynb  README.txt  classification.py  classification_no_averaging.py  evaluation_utils.py  get_embbs.py  get_embbs_no_averaging.py  ila.seg  model_vow+sonants_var_borders.pth  test_saved_model.py
NIR_2/: .gitignore  CHANGES.md  HANDOFF.md  README.md  (+2 more)
(+546 files in other folders)
